2005-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h: Fix typo.

2005-10-21  Christopher Faylor  <cgf@timesys.com>

	* dir.cc (rmdir): Eliminate nonsensical code.

	* fork.cc (fork): Move exit debug_printf to last statement.

2005-10-20  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (futimes): Export.
	(lutimes): Export.
	* times.cc (utimes_worker): Created from utimes, add nofollow flag
	to implement utimes and lutimes.
	(utimes): Just call utimes_worker.
	(lutimes): New function.
	(futimes): Ditto.
	* include/cygwin/version.h: Bump API minor version.

2005-10-19  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (child_info::sync): Move check for !wr_proc_pipe lower.
	* spawn.cc (spawn_guts): Correct check for top-level process.

2005-10-19  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc: Revert loading rcmd, rexec, rresvport and inet_network
	from wsock32.dll since these symbols are not exported from ws2_32.dll.

2005-10-19  Christopher Faylor  <cgf@timesys.com>

	* times.cc (utimes): Only consider fds opened with write access.

2005-10-19  Christopher Faylor  <cgf@timesys.com>

	* fhandler_disk_file.cc (fhandler_base::utimes_fs): Use existing handle
	if fhandler has one.
	* times.cc (utimes): Scan open fds for matching paths and use existing
	fhandler if one exists.

2005-10-19  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_pinfo::dup_proc_pipe): Make warning more severe by
	actually printing it.
	(_pinfo::alert_parent): Fix comment.  Don't send to parent if we are in
	an exec stub.

2005-10-18  Christopher Faylor  <cgf@timesys.com>

	* cygtls.cc (handle_threadlist_exception): Improve diagnostic output.

	* sigproc.cc (child_info::sync): Only clear hProcess when execing.
	(wait_sig): Protect readsig handle.

2005-10-18  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (NtLockVirtualMemory): Import.
	(NtUnlockVirtualMemory): Import.
	(GetProcessWorkingSetSize): Import.